--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
             <li><a id="navPattern" href="#">Pattern</a></li>
             <li><a id="navSimulation" href="#">Simulation</a></li>
             <li><a id="about" class="menuHoverControls" target="_blank" href="#">About</a></li>
+            <li><a id="tips" class="menuHoverControls" target="_blank" href="#">File Import Tips</a></li>
         </ul>
 
     </div><!-- /.navbar-collapse -->
@@ -527,6 +528,17 @@
                 <br/><br/>
                 Built by <a href="http://www.amandaghassaei.com/" target="_blank">Amanda Ghassaei</a> as a final project for <a href="http://courses.csail.mit.edu/6.849/spring17/" target="_blank">Geometric Folding Algorithms</a>.
                 Code available on <a href="https://github.com/amandaghassaei/OrigamiSimulator" target="_blank">Github</a>.
+                </p>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div class="modal fade" id="tipsModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p><b>File Import Tips</b><br/><br/>
+                    ....
                 </p>
             </div>
         </div><!-- /.modal-content -->
