--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>Import FOLD</b><br/><br/>
-                use angles as targets
+                use angles as target thetas
                 </p>
             </div>
             <div class="modal-footer">
