--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     </label>
                     <label class="radio">
                         <input name="colorMode" value="axialStrain" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Axial Strain Material
+                        Axial Strain Material<a class="about floatRight" href="#" id="aboutAxialStrain"><span class="fui-question-circle"></span></a>
                     </label>
                 </div>
             </div><br/>
