max strain clip

--- a/index.html
+++ b/index.html
@@ -493,6 +493,10 @@
                         <input name="colorMode" value="axialStrain" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                         Axial Strain Material<a class="about floatRight" href="#" id="aboutAxialStrain"><span class="fui-question-circle"></span></a>
                     </label>
+                    <div id="axialStrainMaterialOptions" class="indent">
+                        <label>Max Strain: &nbsp;&nbsp;</label>
+                        <input id="strainClip" value="" placeholder="" class="float form-control" type="text"> %<br/>
+                    </div>
                 </div>
             </div><br/>
             Edges:
