--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     <br/><br/>
     <b>Error:</b><br/>
     <div class="indent">
-        <label>Average Error (per node): <span id="globalError"></span></label>
+        <label>Average node error: <span id="globalError"></span></label>
         <a class="about floatRight" href="#" id="aboutError"><span class="fui-question-circle"></span></a>
     </div>
 
@@ -618,14 +618,14 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>Simulation Error</b><br/><br/>
-                    "Average Error (per node)" gives a sense of how much the distance constraints in the
+                    "Average node error" gives a sense of how much the distance constraints in the
                     origami pattern are being violated.  The error at each node is evaluated by averaging the
                     percent deviation of all its distance constraints with adjacent nodes.  This error is
                     reported as a percent of the total length of the distance constraint to remove scaling effects.
                     <br/><br/>
                     This measurement is equivalent to <a href="https://en.wikipedia.org/wiki/Deformation_(mechanics)#Engineering_strain" target="_blank">
                         Cauchy strain or engineering strain</a> of the axial constraints on this system.
-                    Increasing the "Axial Stiffness" of the simulation will tighten these constraints and
+                    Increasing the "Axial Stiffness" will tighten these constraints and
                     lower the error in the simulation.<br/>
                     <br/>
                     To visualize the error of each node graphically, select "Axial Strain Material" under "Mesh Material"
