--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     </label>
                     <label class="radio">
                         <input name="colorMode" value="axialStrain" data-toggle="radio" class="custom-radio" type="radio"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Axial Strain Material<a class="about floatRight" href="#" id="aboutAxialStrain"><span class="fui-question-circle"></span></a>
+                        Axial Strain Visualization<a class="about floatRight" href="#" id="aboutAxialStrain"><span class="fui-question-circle"></span></a>
                     </label>
                     <div id="axialStrainMaterialOptions" class="indent">
                         <label>Max Strain: &nbsp;&nbsp;</label>
@@ -638,7 +638,7 @@
                     Increasing the "Axial Stiffness" will tighten these constraints and
                     lower the error in the simulation.<br/>
                     <br/>
-                    To visualize the error of each node graphically, select "Axial Strain Material" under "Mesh Material"
+                    To visualize the error of each node graphically, select "Axial Strain Visualization" under "Mesh Material"
                      in the left menu.
                 </p>
             </div>
