toggle  user interaction

--- a/index.html
+++ b/index.html
@@ -434,6 +434,10 @@
             Compliant Static Simulation (not finished yet) <a class="about floatRight" href="#" id="aboutStaticSim"><span class="fui-question-circle"></span></a>
         </label>
     </div><br/>
+    <label class="checkbox" for="userInteractionEnabled">
+        <input id="userInteractionEnabled" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+        Allow User Interaction
+    </label><br/>
     <b>Fold Settings:</b><br/><br/>
     <div class="sliderInput" id="creasePercent">
         <span class="label-slider">Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
