--- a/index.html
+++ b/index.html
@@ -414,6 +414,16 @@
             <li><a id="about" class="menuHoverControls" target="_blank" href="#">About</a></li>
             <li><a id="tips" class="menuHoverControls" target="_blank" href="#">File Import Tips</a></li>
         </ul>
+        <!--<form class="navbar-form navbar-right" action="#" role="search">-->
+            <!--<div class="form-group">-->
+              <!--<div class="input-group">-->
+                <div class="sliderInput floatRight" id="creasePercent">
+                    <span class="label-slider">Fold Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                    <input value="" placeholder="" class="form-control" type="text">
+                </div>
+              <!--</div>-->
+            <!--</div>-->
+        <!--</form>-->
 
     </div><!-- /.navbar-collapse -->
     <input id="fileSelector" type="file">
@@ -438,12 +448,6 @@
         <input id="userInteractionEnabled" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
         Allow User Interaction
     </label><br/>
-    <b>Fold Settings:</b><br/><br/>
-    <div class="sliderInput" id="creasePercent">
-        <span class="label-slider">Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
-        <input value="" placeholder="" class="form-control" type="text">
-    </div>
-    <br/><br/><br/>
     <b>Stiffness Settings:</b><a class="floatRight about" href="#" id="aboutStiffness"><span class="fui-question-circle"></span></a><br/><br/>
     <div class="sliderInput" id="axialStiffness">
         <span class="label-slider">Axial Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
@@ -606,12 +610,14 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <p><b>Import FOLD</b><br/><br/>
-                use angles as target thetas
+                <label class="checkbox" for="foldUseAngles">
+                    <input id="foldUseAngles" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    Use current angles as target fold angles
+                </label>
                 </p>
             </div>
             <div class="modal-footer">
-                <button id="doImportFold" type="button" class="btn btn-success">Import</button>
-                <button type="button" class="btn btn default" data-dismiss="modal">Cancel</button>
+                <button data-dismiss="modal" type="button" class="btn btn-success">OK</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
