--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
 
                     <li class="divider"></li>
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
-                    <!--<li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>-->
-                    <li><a id="saveSVGScreenshot" href="#">Save SVG screenshot</a></li>
+                    <li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>
+                    <!--<li><a id="saveSVGScreenshot" href="#">Save SVG screenshot</a></li>-->
                 </ul>
             </li>
             <li><a id="navPattern" href="#">Pattern</a></li>
