--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                 Filename: &nbsp;&nbsp;<input id="stlFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .stl<br/><br/>
                 Scale: &nbsp;&nbsp;<input value="" placeholder="" class="exportScale form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span></b><br/>
-                <span class="smallTxt">(the STL file format is unitless, but typically assumed to be either in inches or mm)</span><br/><br/>
+                <span class="smallTxt">(the STL file format is unitless, but typically assumed to be either in inches or mm)</span><br/>
                 <label class="bigLabel checkbox" for="doublesidedSTL">
                     <input id="doublesidedSTL" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Double Sided
@@ -622,25 +622,34 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <b>Export FOLD</b><br/><br/>
-                Filename: &nbsp;&nbsp;<input id="foldFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .stl<br/><br/>
+                Filename: &nbsp;&nbsp;<input id="foldFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .fold<br/><br/>
                 Author: &nbsp;&nbsp;<input id="foldAuthor" value="Amanda Ghassaei" placeholder="" class="bigInput text form-control" type="text"><br/><br/>
                 Scale: &nbsp;&nbsp;<input value="" placeholder="" class="exportScale form-control" type="text">&nbsp;&nbsp;&nbsp;&nbsp;
                 Units: &nbsp;&nbsp;
                 <div class="btn-group">
-                    <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" type="button"><span id="unitsDisplay"></span> <span class="caret"></span></button>
+                    <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" type="button"><span class="unitsDisplay"></span> <span class="caret"></span></button>
                     <ul id="unitsDropdown" role="menu" class="dropdown-menu">
-                        <li><a data-id="unit" href="#">unitless</a></li>
-                        <li><a data-id="in" href="#">in</a></li>
-                        <li><a data-id="pt" href="#">pt</a></li>
-                        <li><a data-id="m" href="#">m</a></li>
-                        <li><a data-id="cm" href="#">cm</a></li>
-                        <li><a data-id="mm" href="#">mm</a></li>
-                        <li><a data-id="um" href="#">um</a></li>
-                        <li><a data-id="nm" href="#">nm</a></li>
+                        <li><a class="units" data-id="unit" href="#">unitless</a></li>
+                        <li><a class="units" data-id="in" href="#">in</a></li>
+                        <li><a class="units" data-id="pt" href="#">pt</a></li>
+                        <li><a class="units" data-id="m" href="#">m</a></li>
+                        <li><a class="units" data-id="cm" href="#">cm</a></li>
+                        <li><a class="units" data-id="mm" href="#">mm</a></li>
+                        <li><a class="units" data-id="um" href="#">um</a></li>
+                        <li><a class="units" data-id="nm" href="#">nm</a></li>
                     </ul>
                 </div>
                 <br/><br/>
-                Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span></b>
+                Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span> <span class="unitsDisplay"></span></b><br/>
+                <label class="bigLabel checkbox" for="triangulateFOLDexport">
+                    <input id="triangulateFOLDexport" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    Save with triangulated faces
+                </label>
+                <label class="bigLabel checkbox" for="exportFoldAngle">
+                    <input id="exportFoldAngle" data-toggle="checkbox" disabled class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                    Save with vertices_foldAngles (coming soon)
+                </label>
+                <span class="smallTxt">For more information about the FOLD file format, see the <a target="_blank" href="https://github.com/edemaine/fold">offical docs</a></span>.
             </div>
             <div class="modal-footer">
                 <button id="doFOLDsave" type="button" class="actionButton btn btn-success" data-dismiss="modal">Save</button>
