--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
                                 <a tabindex="-1">Origami<span class="pull-right fui-arrow-right"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
+                                    <li><a href="#" class="demo" data-url="Origami/crane.svg">Traditional Crane</a></li>
                                     <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
                                     <li><a href="#" class="demo" data-url="Origami/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
                                     <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar (not fully working yet)</a></li>
