--- a/index.html
+++ b/index.html
@@ -415,7 +415,6 @@
                                     <li><a href="#" class="demo" data-url="Origami/randlettflappingbird.svg">Randlett Flapping Bird</a></li>
                                     <li><a href="#" class="demo" data-url="Origami/singlesquaretwist.svg">Square Twist (single)</a></li>
                                     <li><a href="#" class="demo" data-url="Origami/squaretwistManyAngles.svg">Square Twist (many angles)</a></li>
-                                    <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar (not fully working yet)</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-submenu">
@@ -425,10 +424,22 @@
                                     <li><a href="#" class="demo" data-url="Tessellations/waterbomb.svg">Waterbomb (six-crease base)</a></li>
                                     <li><a href="#" class="demo" data-url="Tessellations/waterbombTwist.svg">Waterbomb (eight-crease base)</a></li>
                                     <li><a href="#" class="demo" data-url="Tessellations/reschtritessellation.svg">Resch Triangle Tessellation</a></li>
+                                    <li><a href="#" class="demo" data-url="Tessellations/oval_tessellation_cp.svg">Lang Oval Tessellation</a></li>
                                 </ul>
                             </li>
-                            <li class="divider"></li>
-                            <li><a href="#" class="demo" data-url="Curved/creaseMesh.txt">Curved Crease 1</a></li>
+                            <li class="dropdown-submenu">
+                                <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#" class="demo" data-url="Curved/creaseMesh.txt">Curved Crease 1</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu">
+                                <a tabindex="-1">Problematic Patterns<span class="pull-right fui-arrow-right"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
+                                    <li><a href="#" class="demo" data-url="Tessellations/hyperbolic_limit_cp.svg">Lang Hyperbolic Limit</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="divider"></li>
