--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="#" class="demo" data-url="Origami/hypar.svg">Hypar</a></li>
                                     <li><a href="#" class="demo" data-url="Tessellations/hyperbolic_limit_cp.svg">Lang Hyperbolic Limit</a></li>
+                                    <li><a href="#" class="demo" data-url="Tessellations/honeycomb_333_cp.svg">Lang Honeycomb Tessellation</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -588,13 +589,13 @@
                     </label>
                 </div>
             </div><br/>
-            Rendering:
-            <div class="indent">
-                <label class="checkbox" for="ambientOcclusion">
-                    <input id="ambientOcclusion" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                    Ambient Occlusion
-                </label>
-            </div>
+            <!--Rendering:-->
+            <!--<div class="indent">-->
+                <!--<label class="checkbox" for="ambientOcclusion">-->
+                    <!--<input id="ambientOcclusion" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>-->
+                    <!--Ambient Occlusion-->
+                <!--</label>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
