--- a/index.html
+++ b/index.html
@@ -643,13 +643,13 @@
                         <li>This tool should be able to automatically clean files of slightly misaligned vertices, stray vertices,
                         duplicate lines (coming), and extra vertices falling in the middle of an edge (coming),
                         but it is recommended to remove these errors yourself in order to avoid problems.</li>
-                        <li>If your simultion is not working, check that the pattern looks correct by clicking on the "Pattern" view in the top nav bar.</li>
+                        <li>If your simulation is not working, check that the pattern looks correct by clicking on the "Pattern" view in the top nav bar.</li>
                     </ul><br/>
 
                 <b>For Adobe Illustrator users:</b><br/><br/>
                 I use Illustrator to create SVGs (though any vector editing program should be fine), here are some tips I've found for making svgs to import into this tool.<br/><br/>
                     <ul>
-                        <li>If you are starting with a premade vector file, first ungroup any groups, release all compound paths
+                        <li>If you are starting with a pre-made vector file, first ungroup any groups, release all compound paths
                         (<b>Select all + Object>Compound Path>Release</b>), and release all clipping masks (<b>Select all + Object>Clipping Mask>Release</b>).</li>
                         <li>Create geometry using the <b>Line Segment Tool</b>.</li>
                         <li>Illustrator can help you select all lines of a particular type so that you can edit their color or opacity together.  Click the line,
